# ephemeral-gha

./: Cargo.toml  LICENSE-MIT  README.md
images/ubuntu-22.04/: Dockerfile.amd64
src/: cli.rs  main.rs
